--- a/package.json
+++ b/package.json
@@ -11,7 +11,31 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.67.3"
+    "react-native": "0.67.3",
+    "@ant-design/icons-react-native": "^2.3.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.x",
+    "@react-navigation/stack": "^5.x",
+    "@rematch/core": "^2.1.0",
+    "@rematch/persist": "^2.1.0",
+    "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.3.7",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-slider": "^2.0.3",
+    "react-native-image-slider-box": "^1.1.7",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-modal": "^13.0.0",
+    "react-native-reanimated": "^2.3.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^3.3.0",
+    "react-native-screens": "^3.6.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
